--- a/IntroPage.html
+++ b/IntroPage.html
@@ -2,8 +2,11 @@
 <html>
     <head>
         <title>Welcome to Demo</title>
+        <link rel="stylesheet" href="pageFormat.css">
     </head>
-    <body style="background-image: url(images/blue.jpg);background-size: cover;">
+    <body style="background-image: url(images/green);">
+
+        <h1>Welcome to Nothing</h1>
 
 
     </body>
