--- a/IntroPage.html
+++ b/IntroPage.html
@@ -4,7 +4,7 @@
         <title>Welcome to Demo</title>
         <link rel="stylesheet" href="pageFormat.css">
     </head>
-    <body style="background-image: url(images/green);">
+    <body style="background-image: url(images/green.jpg);">
 
         <h1>Welcome to Nothing</h1>
 
