--- a/IntroPage.html
+++ b/IntroPage.html
@@ -6,8 +6,8 @@
     </head>
     <body style="background-image: url(images/green.jpg);">
 
-        <h1>YO YO Anika CHIKI CHIKI</h1>
-
+        <h1>YO YO CHIKI CHIKI</h1>
+        <a href="pdf/g_diagram_2.pdf"> Go to Diagram</a>
 
     </body>
 </html>
